Fixed mobile overflow

--- a/src/styles/custom/sections/about/_who-we-are.sass
+++ b/src/styles/custom/sections/about/_who-we-are.sass
@@ -21,17 +21,18 @@
 
         .container
             display: grid
-            grid-template-columns: repeat(12, 1fr)
+            grid-template-columns: repeat(12, minmax(0, 1fr))
             grid-template-rows: 4fr 1fr 1fr
             grid-gap: $gap * 2
             align-items: center
 
-            @media screen and (max-width: $desktop)
-                grid-template-columns: repeat(6, 1fr)
-                grid-template-rows: 3fr 0.5fr 0.5fr 2fr
-                grid-gap: $gap * 3
+            @media screen and (max-width: $tablet)
+                grid-template-columns: minmax(0, 1fr)
+                grid-template-rows: 1fr 0.5fr 0.25fr 2fr
+                grid-gap: 0
                 justify-items: center
                 align-items: stretch
+                min-width: 0
 
             .jacob-image
                 grid-column: 1 / 7
@@ -39,9 +40,9 @@
                 width: 100%
                 box-shadow: $card-shadow
 
-                @media screen and (max-width: $desktop)
-                    grid-column: 1 / 7
-                    grid-row: 1 / span 2
+                @media screen and (max-width: $tablet)
+                    grid-column: 1
+                    grid-row: 1 / span 1
 
             .card
                 &-jacob
@@ -54,9 +55,9 @@
                     justify-content: center
                     align-content: center
 
-                    @media screen and (max-width: $desktop)
-                        grid-column: 2 / 6
-                        grid-row: 2 / span 2
+                    @media screen and (max-width: $tablet)
+                        grid-column: 1
+                        grid-row: 2 / span 1
                 
                 .quote
                     font-style: italic
@@ -72,8 +73,8 @@
                 height: fit-content
                 width: fit-content
 
-                @media screen and (max-width: $desktop)
-                    grid-column: 1 / 7
+                @media screen and (max-width: $tablet)
+                    grid-column: 1
                     grid-row: 4 / span 1
 
                 .card-content
