--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -14,7 +14,7 @@ $link: $mint-dark
 
 //secondary variables
 $card-padding: 4em 3em
-$card-padding-mobile: 2em 1.25em
+$card-padding-mobile: 3em 1.25em
 $title-margin: 1.25em
 
 // Import css files
